syntax = "proto3";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package = "../pb";

message Message {
  string Id = 1;
  uint32 Qom = 2;
  MessageBody Body = 3;
  google.protobuf.Timestamp ExpireAt = 4;
  string ClientId = 5;
  bool Ack = 6;
}

message MessageBody {
  uint32 Cmd = 1;
  google.protobuf.Any Content = 2;
}
